# democritus

./: .gitignore  .gitmodules  minif2f.jsonl  pyproject.toml
src/democritus/: __init__.py  baseline.py  minif2f.py  setup.py  ts.py  verifier.py
src/democritus/algos/: htps.py
src/democritus/model/: config.py  generation.py  kvcache.py  model.py  sampling.py  test.py  tokenizer.py
