[project]
name = "democritus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "together>=1.3.3",
    "jax>=0.4.35",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "blobfile>=3.0.0",
    "safetensors>=0.4.5",
    "fairscale>=0.4.13",
    "fire>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
